2006-01-13  9:23 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase 4: call all phases, which are now
	in functions.

2006-01-13  8:55 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangle) to fix an uninitalize memeory read,
	set minVolume before use. this repared it so it can be used with
	phased adaption.

2006-01-12 16:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridInterpolateMap2) try node0 and node1 references
	for parent cell, return NULL if fails.
	* src/grid.c (gridFindEnclosingCell) try largest bary direction first.
	for parent cell, return NULL if fails.
	* src/gridinsert.c (gridSplitEdgeRatio) moved gridInterpolateMap2
	after node projection, so interpolation parent can be tested.
	undo edge split if interpolation fails.
	
2006-01-12 13:40 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) follow into
	gridFindClosestBoundaryCell.	
	* src/grid.c (gridFindClosestBoundaryCell) initialize 
	gridFindClosestBoundaryFace and translate back into cell.
	* src/grid.c (gridFindClosestBoundaryFace) navigates boundary faces.
	* src/grid.c (gridBarycentricCoordinateTri) bary coor for faces
	* src/grid.c (gridProjectToTriangle) snap point to tri 
	(should be in grid math)

2006-01-11 14:35 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSwap) lower gridMinSwapCost and
	gridMinSwapCostImprovement to get more swaps.

2006-01-11 14:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMinSwapCost,gridMinSwapCostImprovement) store
	the swap cost limits in the Grid struct.
	* src/gridswap.c (gridMinSwapCost,gridMinSwapCostImprovement) use
	instead of COSTLIMIT and REQUIRED_IMPROVEMENT.

2006-01-11 08:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptVolumeEdges) only split long volume edges.
	* src/unit_main.c (main) --phase -3: call gridAdaptVolumeEdges to 
	complete test case.

2006-01-10 16:16 Mike Park  <mike.park@nasa.gov>
