@@ -2327,33 +2327,6 @@ Grid *gridBarycentricCoordinate(Grid *grid, double *xyz0, double *xyz1,
   return grid;
 }
 
-static Grid *gridProjectToTriangle(Grid * grid, double *projected_target, 
-			    double *xyz0, double *xyz1, double *xyz2 )
-{
-  double edge0[3], edge1[3];
-  double norm[3];
-  double disp[3];
-  double length;
-  gridSubtractVector(xyz1, xyz0, edge0);
-  gridSubtractVector(xyz2, xyz0, edge1);
-  gridCrossProduct(edge0,edge1,norm);
-  { // ugly!!! refacotr to use gridmath method
-    length = sqrt(gridDotProduct(norm,norm));
-    if (length > 0 ) {
-      norm[0] /= length;
-      norm[1] /= length;
-      norm[2] /= length;
-    }
-  }
-  gridSubtractVector(projected_target, xyz0, disp);
-  length = gridDotProduct(disp,norm);
-  projected_target[0] -= length*norm[0];
-  projected_target[1] -= length*norm[1];
-  projected_target[2] -= length*norm[2];
- 
-  return grid;
-}
-
 Grid *gridBarycentricCoordinateTri(Grid *grid, 
 				   double *xyz0, double *xyz1, double *xyz2,
 				   double *target, double *bary )
@@ -2373,7 +2346,7 @@ Grid *gridBarycentricCoordinateTri(Grid *grid,
   projected_target[1] = target[1];
   projected_target[2] = target[2];
 
-  gridProjectToTriangle(grid, projected_target, xyz0, xyz1, xyz2  );
+  gridProjectToTriangle(projected_target, xyz0, xyz1, xyz2  );
 
   /* these should be computed with kramers rule for numerical stability
    * and efficiency */
@@ -2637,7 +2610,7 @@ int gridFindClosestBoundaryCell(Grid *grid, int starting_guess,
   gridNodeXYZ(grid, nodes[0], xyz0);
   gridNodeXYZ(grid, nodes[1], xyz1);
   gridNodeXYZ(grid, nodes[2], xyz2);
-  gridProjectToTriangle(grid, projected_target, xyz0, xyz1, xyz2  );
+  gridProjectToTriangle(projected_target, xyz0, xyz1, xyz2  );
 
   gridCell( grid, current_cell, nodes );
   gridNodeXYZ(grid, nodes[0], xyz0);
@@ -2687,7 +2660,7 @@ int gridFindClosestBoundaryFace(Grid *grid, int starting_guess,
     projected_target[1] = target[1];
     projected_target[2] = target[2];
 
-    gridProjectToTriangle(grid, projected_target, xyz0, xyz1, xyz2  );
+    gridProjectToTriangle(projected_target, xyz0, xyz1, xyz2  );
     
     if (grid != gridBarycentricCoordinateTri( grid, xyz0, xyz1, xyz2, 
 					      projected_target, trib ) ) {
